# benchmark-matvec

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  demo.cpp  fixture-metas.hpp  kernel-blas.hpp  kernel-cblas.hpp  kernel-default.hpp  kernel-eigen.hpp  kernel-mkl.hpp  kernel-sycl.hpp  kernel-ug4.hpp  timer.hpp
kernels/: kernel-cblas.hpp  kernel-default.hpp  kernel-eigen.cpp  kernel-eigen.hpp  kernel-mkl.cpp  kernel-mkl.hpp  kernel-sycl.cpp  kernel-sycl.hpp  kernel-ug4.cpp  kernel-ug4.hpp
kernels/kokkos/: kernel-kokkos-plain.hpp  kernel-kokkos-simd.hpp  kernel-kokkos.cpp  kernel-kokkos.hpp  kokkos_test.cpp
kernels/torch/: kernel-torch.cpp  kernel-torch.hpp
meta/: fixtures.hpp  tests.hpp  timer.hpp  tools.hpp
tests/solver/: init.lua  solver_tut_01.lua
